Version 0.1a3
-------------

  * Added a status report which is generated and emailed when a spider closes.
  * Added support for local_settings.py to override scrapy settings.
  * Added a spider for downloading checklists for WorldBirds.


Version 0.1a2
-------------

  * Fixed the problem of checklists getting assigned to the wrong response by
    limiting the number of simultaneous requests.
  * Simplified the arguments used to initialize the eBird spider by moving
    semi-static ones into the settings file.


Version 0.1a1
-------------

  * Initial version with working spider downloading checklists from eBird.