@@ -1,0 +1,6 @@
+"""Exceptions used in the spiders."""
+
+
+class LoginException(Exception):
+    """Exception raised when logging into a site fails."""
+    pass
